# MeshStudioAI

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: contributing.md  index.md  troubleshooting.md
docs/assets/stylesheets/: extra.css
docs/demos/: navier-stokes-adaptivity.md
docs/getting-started/: datasets.md  first-run.md  installation.md  navier-stokes-adaptivity.md
docs/guides/: datasets.md  evaluation.md  first-run.md  training.md  wandb-and-checkpoints.md
docs/reference/: configuration.md  repository-layout.md
examples/: navier_stokes_adaptivity_demo.ipynb  navier_stokes_adaptivity_demo.py
examples/extensions_poisson/: poisson_simple_21x21.py
meshes/: airfoil2_050.geo  airfoil2_050.msh  airfoil_050.geo
src/: __init__.py  run_GNN.py  run_pipeline.py
src/meshstudioai/: __init__.py  data.py  data_mixed.py  pde_data.py  pde_solvers.py  utils_data.py  utils_eval.py  utils_eval_plotting.py
src/meshstudioai/classical_meshing/: create_gmesh.py  ma_mesh_1d.py  ma_mesh_2d.py
src/meshstudioai/firedrake_difFEM/: difFEM_2d.py
src/meshstudioai/models/: __init__.py  direct_optimisation.py  mesh_adaptor_model.py
src/meshstudioai/models/UM2N_aux/: extractor.py
src/meshstudioai/navier_stokes_data/: __init__.py
