[project]
name = "meshstudioai"
version = "0.1.0"
description = "MeshStudioAI - A collection of AI tools for adaptive meshing in the context of finite element methods (FEM)"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Georg Maierhofer", email = "gam37@cam.ac.uk" },
  { name = "James Rowbottom", email = "jr908@cam.ac.uk" }
]
dependencies = [
  "torch==2.6.0",
  "torch-geometric==2.4.0",
  "torchdiffeq",
  "torchquad",
  "pandas",
  "plotly",
  "wandb",
  "adjustText",
  "imageio[ffmpeg]",
  "tensorboard",
  "einops",
  "pyvista",
  "petsctools",
  # Git dependencies below
  "animate @ git+https://github.com/pyroteus/animate.git",
  "movement @ git+https://github.com/pyroteus/movement.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
